[gd_scene load_steps=18 format=3 uid="uid://b0dfatjrrakas"]

[ext_resource type="Script" path="res://src/units/enemy_axeman.gd" id="1_snhp6"]
[ext_resource type="PackedScene" uid="uid://bqymrweaohfw0" path="res://src/components/movement_component.tscn" id="2_ikxw0"]
[ext_resource type="PackedScene" uid="uid://bmog2avuugi54" path="res://src/components/health_component.tscn" id="3_tmvus"]
[ext_resource type="PackedScene" uid="uid://ce75dqmwnnxpp" path="res://src/components/hitbox_component.tscn" id="4_jknoe"]
[ext_resource type="PackedScene" uid="uid://boqwt1npb004v" path="res://src/components/attack_component.tscn" id="5_irdw1"]
[ext_resource type="PackedScene" uid="uid://ulkfbmmjakso" path="res://src/components/attack_range_component.tscn" id="7_nitny"]
[ext_resource type="PackedScene" uid="uid://d0irtd748m7vf" path="res://src/components/target_component.tscn" id="8_jwod6"]
[ext_resource type="Texture2D" uid="uid://4u2tsww01s0n" path="res://assets/tilemaps/MiniLumberjack_scaled_2x.png" id="9_q25gm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p7g23"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jvsuu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l0odd"]
radius = 58.0775

[sub_resource type="Animation" id="Animation_pgy0h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTileMap:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [21]
}

[sub_resource type="Animation" id="Animation_1vd6o"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTileMap:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_p3bw6"]
resource_name = "die"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTileMap:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [49, 50, 51, 52]
}

[sub_resource type="Animation" id="Animation_ghy4d"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTileMap:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_hhhbk"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTileMap:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k5m8j"]
_data = {
"RESET": SubResource("Animation_pgy0h"),
"attack": SubResource("Animation_1vd6o"),
"die": SubResource("Animation_p3bw6"),
"idle": SubResource("Animation_ghy4d"),
"run": SubResource("Animation_hhhbk")
}

[node name="EnemyAxeman" type="CharacterBody2D" node_paths=PackedStringArray("target_component", "health_component") groups=["enemy"]]
script = ExtResource("1_snhp6")
target_component = NodePath("TargetComponent")
health_component = NodePath("HealthComponent")

[node name="MovementComponent" parent="." node_paths=PackedStringArray("moveTarget", "attack_range_component") instance=ExtResource("2_ikxw0")]
moveTarget = NodePath("../TargetComponent")
attack_range_component = NodePath("../AttackRangeComponent")
SPEED = 50

[node name="HealthComponent" parent="." node_paths=PackedStringArray("animation_player") instance=ExtResource("3_tmvus")]
animation_player = NodePath("../AnimationPlayer")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_jknoe")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_p7g23")

[node name="AttackComponent" parent="." node_paths=PackedStringArray("animation_player", "health_component", "attackRangeComponent", "targetComponent") instance=ExtResource("5_irdw1")]
animation_player = NodePath("../AnimationPlayer")
health_component = NodePath("../HealthComponent")
attackRangeComponent = NodePath("../AttackRangeComponent")
targetComponent = NodePath("../TargetComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jvsuu")

[node name="AttackRangeComponent" parent="." node_paths=PackedStringArray("targetComponent") instance=ExtResource("7_nitny")]
targetComponent = NodePath("../TargetComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRangeComponent"]
shape = SubResource("CircleShape2D_l0odd")

[node name="TargetComponent" parent="." instance=ExtResource("8_jwod6")]
target_group = "hero"

[node name="SpriteTileMap" type="Sprite2D" parent="."]
position = Vector2(0, -17)
texture = ExtResource("9_q25gm")
hframes = 7
vframes = 8
frame = 21

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k5m8j")
}
autoplay = "run"
